examples/test/testpolicy5063.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5063
  namespace: namespace35
spec:
  podSelector:
    matchLabels:
      key12: value34
      key26: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value6
          key41: value10
      podSelector:
        matchLabels:
          key1: value25
          key48: value1
